acvm-repo/msgpack_tagged/tests/compile_fail/enum_variant_tag_skip.rs
//! `#[tag(skip)]` is meaningful for struct fields (omit the field from the
//! wire) but has no obvious semantics for an enum variant — variants are the
//! discriminator, not optional payload — and is rejected.

use msgpack_tagged::MsgpackTagged;

#[derive(MsgpackTagged)]
enum Choice {
    #[tag(0)]
    First,
    #[tag(skip)]
    Second,
}

fn main() {}
